<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrestasiActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headerikip" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/prestasi" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageButton
        android:id="@+id/bprev"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/prev" />

    <ImageButton
        android:id="@+id/bnext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/next" />
    <ImageSwitcher
        android:id="@+id/imgprestasi"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/bprev"
        app:layout_constraintEnd_toStartOf="@id/bnext"
        app:layout_constraintStart_toEndOf="@id/bprev"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:srcCompat="@drawable/boy"/>
    <TextSwitcher
        android:id="@+id/tjudulprestasi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tJudul"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/bprev"
        app:layout_constraintEnd_toStartOf="@+id/bnext"
        app:layout_constraintStart_toEndOf="@id/bprev"
        app:layout_constraintTop_toTopOf="@id/bprev"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toStartOf="@+id/bnext"
        app:layout_constraintStart_toEndOf="@+id/bprev"
        app:layout_constraintTop_toBottomOf="@+id/bprev">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextSwitcher
                android:id="@+id/tisiprestasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:text="@string/tIsi"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/copyright"
                app:layout_constraintEnd_toStartOf="@+id/bnext"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/bprev"
                app:layout_constraintTop_toBottomOf="@+id/tjudulprestasi" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>